# rm-gregg

./: README.md  pyproject.toml
docs/: PLAN.md  _config.yml  api-reference.md  architecture.md  contributing.md  getting-started.md  index.md  roadmap.md
src/rm_greg/: __init__.py  cli.py  models.py
src/rm_greg/api/: __init__.py  app.py
src/rm_greg/feedback/: __init__.py  comparison.py  generator.py  scoring.py
src/rm_greg/ingest/: __init__.py  extractor.py
src/rm_greg/preprocessing/: __init__.py  features.py  normalize.py  segment.py
src/rm_greg/synthetic/: __init__.py  generator.py
src/rm_greg/training/: __init__.py  dataset.py  stroke_classifier.py
tests/test_api/: test_app.py
tests/test_feedback/: test_comparison.py  test_generator.py
tests/test_ingest/: test_extractor.py
tests/test_preprocessing/: test_features.py  test_normalize.py  test_segment.py
tests/test_synthetic/: test_generator.py
tests/test_training/: test_dataset.py
